2023-08-26T08:14:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5983739299 # 1815
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-26
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 279 447 / 282 450
* notice: next accum: outdated-unq outdated-all / unq all: 279 447 / 283 451
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-26]

2023-08-24T08:16:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5961208459 # 1809
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-24
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 279 447 / 281 449
* notice: next accum: outdated-unq outdated-all / unq all: 279 447 / 282 450
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-24]

2023-08-19T00:55:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5908472102 # 1793
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 279 447 / 280 448
* notice: next accum: outdated-unq outdated-all / unq all: 279 447 / 281 449
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-08-18]

2023-08-18T08:16:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5900396278 # 1791