@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-26T08:14:59Z",
-  "count_outdated" : 447,
-  "uniques_outdated" : 279,
+  "timestamp" : "2023-09-02T00:57:11Z",
+  "count_outdated" : 449,
+  "uniques_outdated" : 281,
   "count" : 451,
   "uniques" : 283,
   "clones" : [
-    {
-      "timestamp": "2023-08-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-08-24T00:00:00Z",
       "count": 1,
