@@ -1,12 +1,7 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 2,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-08-18T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-08-24T00:00:00Z",
       "count": 1,
